remove unuse class

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "keywords": [
         "php",
         "hyperf",
-        "tinker"
+        "tinker",
+        "swoole"
     ],
     "authors": [
         {
