--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "leearvin/hyperf-tinker",
+    "name": "tradzero/hyperf-tinker",
     "type": "library",
     "license": "MIT",
     "keywords": [
